# crucible

./: Cargo.toml  README.md
backend/: Cargo.toml  Dockerfile  README.md
backend/scripts/: init-db.sql
backend/src/: error.rs  jobs.rs  lib.rs  main.rs  telemetry.rs
backend/src/api/handlers/: dashboard.rs  mod.rs  profiling.rs
backend/src/api/middleware/: logging.rs
backend/src/config/: mod.rs  observability.rs  reload.rs
backend/src/db/: seeds.rs
backend/src/services/: audit.rs  business_metrics.rs  cache.rs  error_recovery.rs  feature_flags.rs  log_alerts.rs  mod.rs  sandbox.rs  sys_metrics.rs  tracing.rs  transformers.rs
backend/src/utils/: mod.rs
backend/src/workers/: mod.rs  priority.rs
backend/tests/: build_metrics_tests.rs  config_tests.rs  contract_integration_tests.rs  dashboard_tests.rs  tracing_integration.rs
backend/tests/integration/: api_profile_test.rs  api_status_test.rs  mod.rs
backend/tests/load/: profile_load.rs  status_load.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: account.rs  cost.rs  env.rs  lib.rs  prelude.rs  token.rs
contracts/crucible/tests/: sdk_compat.rs
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: treasury_test.rs
examples/emergency_stop/src/: test.rs
examples/escrow/src/: test.rs
examples/multisig/: Cargo.toml
examples/multisig/src/: lib.rs  test.rs
examples/prediction-market/: Cargo.toml
examples/prediction-market/src/: lib.rs  test.rs
examples/staking/src/: test.rs
examples/vesting/src/: lib.rs  test.rs
examples/vesting/test_snapshots/test/: test_revoke_returns_unvested_tokens_to_admin.1.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ContractAbiExplorer.tsx  EventListenerDashboard.css  EventListenerDashboard.test.tsx  EventListenerDashboard.tsx  TransactionSimulator.css  WalletConnector.css  WalletConnector.test.tsx  WalletConnector.tsx  eventFeed.test.ts  eventFeed.ts  useEventFeed.ts
libs/crucible/src/tests/: simulation_errors.rs
